...
    <string name="mainmenu_addIncome_button">Dodaj przychód</string>
    <string name="mainmenu_addExpense_button">Dodaj wydatek</string>
    <string name="mainmenu_finMgmt_button">Zarządzanie finansami</string>
    <string name="mainmenu_addReceipt_button">Dodaj paragon</string>
    <string name="mainmenu_addShoppingList_button">Dodaj listę zakupów</string>
    <string name="mainmenu_shoppingLists_button">Listy zakupów</string>
    <string name="mainmenu_profiles_button">Wyloguj się</string>
    <string name="mainmenu_settings_button">Ustawienia</string>
    <string name="mainmenu_receiptsList_button">Paragony</string>
    <string name="prof_rc_secondLine">Description</string>
...
    <string name="schpay_rc_secondLine">Description</string>
    <string name="schpay_rc_category">Example</string>
    <string name="schpay_rc_firstLine">Example</string>
    <string name="schpay_rc_currency">PLN</string>
    <string name="schpay_rc_transDate">1900-01-01</string>
    <string name="schpay_empty_text">Jak widzisz, nie ma tutaj<br /> żadnej zaplanowanej płatności, dodaj ją!</string>
    <string name="schpay_fab_addScheduledPayment">Dodaj zaplanowaną płatność</string>
    <string name="schpay_create_info_login">Tworzenie<br /> zaplanowanej płatności</string>
    <string name="schpay_createform_text_value">Wartość płatności</string>
    <string name="schpay_createform_text_desc">Opis płatności</string>
    <string name="schpay_createform_spin_cat_info">Kategoria:</string>
    <string name="schpay_createform_checkbox_budget">Zaliczana do budżetu</string>
    <string name="schpay_createform_spin_budget_info">Budżet:</string>
    <string name="schpay_createform_submit">Utwórz zaplanowaną płatność</string>
    <string name="schpay_edit_info_login">Edycja<br /> zaplanowanej płatności</string>
    <string name="schpay_editform_text_value">Wartość płatności</string>
    <string name="schpay_editform_text_desc">Opis płatności</string>
    <string name="schpay_editform_spin_cat_info">Kategoria:</string>
    <string name="schpay_editform_checkbox_budget">Zaliczana do budżetu</string>
    <string name="schpay_editform_spin_budget_info">Budżet:</string>
    <string name="schpay_editform_submitEdit">Edytuj zaplanowaną płatność</string>
    <string name="schpay_deleteform_submitDelete">Usuń zaplanowaną płatność</string>
    <string name="schpay_delete_info_login">Usuwanie<br /> zaplanowanej płatności</string>
    <string name="schpay_deleteform_spin_cat_info">Kategoria:</string>
    <string name="schpay_deleteform_spin_budget_info">Budżet:</string>
    <string name="schpay_deleteform_confirmation_info">Czy na pewno<br /> chcesz usunąć tę płatność?</string>
    <string name="finmgmt_schpay_button">Zaplanowane płatności</string>
    <string name="title_activity_scheduled_payment">Zaplanowane płatności</string>
    <string name="schpay_calevent_title">Zaplanowana płatność:</string>
...
    <string name="schpay_create_transaction_confirmation_info">Czy na pewno<br /> chcesz utworzyć transakcję?</string>
    <string name="schpay_create_transaction_submit">Utwórz transakcję</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="stat_description_info">Dla jakiego okresu chcesz uzyskać dane?</string>
...
    <string name="set_currency_info">Waluta:</string>
    <string name="set_notifications_time_info">Godzina powiadomień:</string>
    <string name="set_notifications_time_button">Ustaw godzinę powiadomień</string>
    <string name="set_people_in_household_info">Liczba osób w gosp. dom.</string>
    <string name="set_night_mode_info">Tryb nocny:</string>
    <string name="set_save_button">Zapisz ustawienia</string>
    <string name="set_timepicker_dialog_title">Wybierz godzinę</string>
    <string name="sholist_tooltip">Utwórz listę zakupów</string>
...
    <string name="mainmenu_profile_info">Saldo dla profilu:</string>
    <string name="set_editBalance_info">Zresetuj saldo:</string>
    <string name="set_editBalance_button">Zresetuj saldo</string>
    <string name="set_edit_balance_info">Resetowanie salda</string>
    <string name="set_edit_balance_edit_balance">Saldo</string>
    <string name="set_edit_balance_submit">Resetuj saldo</string>
    <string name="receipt_edit_menu_recognizeDataFromReceipt">Odczytaj tekst z paragonu</string>
    <string name="receipt_editData_form_text_data">Treść paragonu</string>
...
    <string name="expcat_createexpcat_name_error_syntax">Nazwa kategorii powinna składać się z co najmniej dwóch liter.</string>
    <string name="expcat_createexpcat_name_error_existing">Istnieje już kategoria z podaną nazwą.</string>
    <string name="schpay_createschpay_date_error_badDate">Płatność musi zostać zaplanowana w dniu późniejszym niż dziś.</string>
    <string name="schpay_createschpay_value_error_empty">Podaj wartość płatności.</string>
    <string name="income_createincome_value_error_empty">Podaj wartość przychodu.</string>
    <string name="expense_createexpense_value_error_empty">Podaj wartość wydatku.</string>
...
