...
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/schpay_edit_info_login">
        </TextView>

        <TextView
            android:id="@+id/schpay_editform_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="24dp"
            android:layout_below="@+id/schpay_editform_info_create"
            android:drawableStart="@drawable/baseline_today_24"
...
            android:layout_centerInParent="true"
            android:layout_below="@+id/schpay_editform_spin_budget_info"
            android:layout_marginTop="10dp"
            android:text="@string/schpay_editform_submitEdit" />

        <Button
            android:id="@+id/schpay_editform_submitDelete"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/schpay_editform_submitEdit"
            android:layout_marginTop="10dp"
            android:text="@string/schpay_deleteform_submitDelete" />
...
