...
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/schpay_create_info_login">
        </TextView>

        <TextView
            android:id="@+id/schpay_createform_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="24dp"
            android:layout_below="@+id/schpay_createform_info_create"
            android:drawableStart="@drawable/baseline_today_24"
...
