...
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/set_currency_info"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/set_currency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_toEndOf="@id/set_currency_info"
            android:inputType="text"
            android:maxLength="4"
...
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/set_people_in_household_info"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/set_people_in_household_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_currency_info"
            android:layout_margin="20dp"
            android:layout_toEndOf="@id/set_people_in_household_info"
            android:inputType="number"
...
